création du caroussel ( sans photos pour le moment)

--- a/troisieme_page.html
+++ b/troisieme_page.html
@@ -7,5 +7,15 @@
     <title></title>
 </head>
 <body>
+    <div class="container">
+
+
+        <div class="carousel-section">
+            <div class="carousel">
+                <img src="image1.jpg" alt="Photo 1" style="animation-delay:0s;">
+                <img src="image2.jpg" alt="Photo 2" style="animation-delay:4s;">
+                <img src="image3.jpg" alt="Photo 3" style="animation-delay:8s;">
+            </div>
+    </div>
 </body>
 </html>
