Ajout du rectangle et de la description

--- a/troisieme_page.html
+++ b/troisieme_page.html
@@ -16,6 +16,34 @@
                 <img src="image2.jpg" alt="Photo 2" style="animation-delay:4s;">
                 <img src="image3.jpg" alt="Photo 3" style="animation-delay:8s;">
             </div>
+        <div class="title">Titre de l'image</div>
+
+
+            <div class="icons">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+
+            <div class="description">
+
+                </div>
+                </div>
+
+
+
+            <div class="side-panel">
+            <ul>
+                <li>Élément 1</li>
+                <li>Élément 2</li>
+                <li>Élément 3</li>
+                <li>Élément 4</li>
+            </ul>
+
+
+            <button class="louer-btn">Louer</button>
+        </div>
     </div>
 </body>
 </html>
