Ajout des images et de certaines infos, amélioration caroussel

--- a/troisieme_page.html
+++ b/troisieme_page.html
@@ -12,11 +12,13 @@
 
         <div class="carousel-section">
             <div class="carousel">
-                <img src="image1.jpg" alt="Photo 1" style="animation-delay:0s;">
-                <img src="image2.jpg" alt="Photo 2" style="animation-delay:4s;">
-                <img src="image3.jpg" alt="Photo 3" style="animation-delay:8s;">
+                <img src="./img/img1-aptb.webp" alt="Photo 1" style="animation-delay:2s;">
+                <img src="./img/img2-aptb.webp" alt="Photo 2" style="animation-delay:2s;">
+                <img src="./img/img3-aptb.webp" alt="Photo 2" style="animation-delay:2s;">
+                <img src="./img/img4-aptb.webp" alt="Photo 2" style="animation-delay:2s;">
+                <img src="./img/img5-aptb.webp" alt="Photo 2" style="animation-delay:2s;">
             </div>
-        <div class="title">Titre de l'image</div>
+        <div class="title">Appartement T1 bis à Bidart</div>
 
 
             <div class="icons">
@@ -35,10 +37,10 @@
 
             <div class="side-panel">
             <ul>
-                <li>Élément 1</li>
-                <li>Élément 2</li>
-                <li>Élément 3</li>
-                <li>Élément 4</li>
+                <li>Loyer: 1400€/mois</li>
+                <li>Adresse: 254 chemin du pays basque</li>
+                <li>Ville: 64210 bidart</li>
+                <li>Contact: 0782573871</li>
             </ul>
 
 
