ajout des inputs

--- a/troisieme_page.html
+++ b/troisieme_page.html
@@ -45,6 +45,24 @@ Notre agence vous accueille téléphoniquement du lundi au samedi, de 8h à 19h,
                 <li>Ville: 64210 bidart</li>
                 <li>Contact: 0782573871</li>
             </ul>
+            <!-- Formulaire coordonnées -->
+            <div class="form">
+                <label>Nom :</label>
+                <input type="text" placeholder="Votre nom">
+
+                <label>Prénom :</label>
+                <input type="text" placeholder="Votre prénom">
+
+                <label>Coordonnées :</label>
+                <input type="text" placeholder="Téléphone ou email">
+
+                <label>Date de début du bail :</label>
+                <input type="date">
+
+                <label>Date de fin du bail:</label>
+                <input type="date">
+            </div>
+
 
 
             <button class="louer-btn">Louer</button>
