--- a/seconde_page.html
+++ b/seconde_page.html
@@ -32,7 +32,7 @@
 
     <div class="breadcrumb-container">
         <div class="container">
-            <a href="#">Accueil</a> > <a href="#">Logement étudiant</a> > <a href="#">Logement ESTIA Bidart</a>
+            <a href="#">Accueil</a> > <a href="#">Logement ESTIA Bidart</a>
         </div>
     </div>
 
