lien entre page2 et page3

--- a/seconde_page.html
+++ b/seconde_page.html
@@ -96,6 +96,7 @@
                 <div class="properties-grid">
 
                     <article class="property-card">
+                        <a href="troisieme_page.html" class="card-content">
                         <div class="card-image">
                             <img src="./photo_logement/logement1.webp" alt="Studio moderne près de l'ESTIA Bidart">
                             <div class="favorite-icon"><i class="far fa-heart"></i></div>
@@ -107,12 +108,13 @@
                             <p class="details">Bidart 64210 | 31m² | Meublé</p>
                             <p class="description">Studio meublé - Vue dégagée sur la côte basque... Idéal pour étudiant ESTIA.</p>
                             <div class="price">
-                                <span>869€</span><span class="per-month">/ mois</span>
+                            <span>869€</span><span class="per-month">/ mois</span>
                             </div>
                             <ul class="amenities-list">
                                 <li><i class="fas fa-check-circle"></i> Disponible immédiatement</li>
                             </ul>
                         </div>
+                        </a>
                     </article>
 
                     <article class="property-card">
