changement forcé des couleurs de la 3eme page

--- a/troisieme_page.html
+++ b/troisieme_page.html
@@ -65,7 +65,9 @@
 
 
 
-            <button class="louer-btn">Louer</button>
+            <a href="construction_en_cours.html">
+                <button class="louer-btn">Louer</button>
+            </a>
         </div>
     </div>
 </body>
