modif apparence page 2

--- a/seconde_page.html
+++ b/seconde_page.html
@@ -120,7 +120,7 @@
                     <article class="property-card">
                         <div class="card-image">
                             <img src="./photo_logement/logement2.webp" alt="Intérieur de la résidence étudiante Canvas Ivy">
-                            <span class="tag promotion"><i class="fas fa-star"></i> Promotion en cours</span>
+                            <span class="tag indisponible"><i class="fas fa-star"></i> Indisponible</span>
                             <div class="favorite-icon"><i class="far fa-heart"></i></div>
                         </div>
                         <div class="card-content">
@@ -141,7 +141,7 @@
                     <article class="property-card">
                         <div class="card-image">
                             <img src="./photo_logement/logement3.webp" alt="Façade de la résidence Twenty Campus Bidart">
-                            <span class="tag new"><i class="fas fa-star"></i> Nouveauté</span>
+                            <span class="tag indisponible"><i class="fas fa-star"></i> Indisponible</span>
                             <div class="favorite-icon"><i class="far fa-heart"></i></div>
                         </div>
                         <div class="card-content">
@@ -162,7 +162,7 @@
                     <article class="property-card">
                         <div class="card-image">
                             <img src="./photo_logement/logement4.webp" alt="Salon de colocation de luxe">
-                            <span class="tag promotion"><i class="fas fa-star"></i> Dernière chance</span>
+                            <span class="tag indisponible"><i class="fas fa-star"></i> Indisponible</span>
                             <div class="favorite-icon"><i class="far fa-heart"></i></div>
                         </div>
                         <div class="card-content">
