modif page trois

--- a/troisieme_page.html
+++ b/troisieme_page.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="troisieme_page.css" />
     
 </head>
+
 <body>
     <div class="container">
 
@@ -19,12 +20,7 @@
                 <img src="./img/img1-aptb.webp" alt="Photo 1" style="animation-delay:0s;">
             </div>
         <div class="title">Appartement T1 bis à Bidart</div>
-
-
-            <div class="img">
-            <img src="./img/img.lv.jpg" class="icone">
-            <img src="./img/img-p.jpg" class="icone">
-            <img src="./img/img-ll.jpg" class="icone">
+        
         </div>
 
 
@@ -66,7 +62,7 @@
 
 
             <a href="construction_en_cours.html">
-                <button class="louer-btn">Louer</button>
+                <div class="louer-btn">Louer</div>
             </a>
         </div>
     </div>
